[tool.poetry]
name = "cldpyprom01"
version = "0.1.0"
description = ""
authors = ["mmsvob22 <55430035+mmsvob22@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "cldpyprom01", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.135.1"
uvicorn = "^0.42.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
